# hackathon

./: .gitignore  AGENTS.md  API_SPEC.md  ARCHITECTURE.md  BOT_INTEGRATION_GUIDE.md  DEMO_GUIDE.md  LICENSE  PROJECT_OVERVIEW.md  README.md  SYSTEM_DESIGN.md  WALKTHROUGH.md  arena_cli.py  arena_config.py  arena_textual_app.py  arena_tournament.py  bot.py  bot_battle_runner.py  bot_client.py  bot_strategies.py  bots_config.example.json  engine.py  exchange_server.py  exporter.py  margin_risk_manager.py  market_data_server.py  message_schemas.py  models.py  monitor_client.py  monitor_tui.py  orderbook.py  positions.py  requirements.txt  risk_manager.py  server.py  session_manager.py  strategy_example.py  tournament_manager.py
nexus_core/: Cargo.toml  NEXUS_ARCH.md  README.md  pyproject.toml
nexus_core/src/: lib.rs  python.rs
nexus_core/src/matching/: mod.rs  orderbook.rs
nexus_core/src/persistence/: mod.rs
nexus_core/src/risk/: mod.rs
nexus_core/src/types/: fixed_point.rs  mod.rs  side.rs
nexus_core/src/wire/: messages.rs  mod.rs
tests/: test_phase1_snippet.py  test_phase2_accounting_snippet.py  test_phase3_risk_snippet.py  test_phase4_arena_cli_snippet.py  test_phase4_margin_risk_snippet.py  test_phase4_session_engine_snippet.py  test_phase4_tournament_ux_snippet.py
web-dashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
web-dashboard/src/: App.tsx  index.css  types.ts
web-dashboard/src/components/: BotPerformanceTable.tsx  EquitySparkline.tsx  HeaderStats.tsx  Leaderboard.tsx  Liquidations.tsx  OrderBook.tsx  Panel.tsx  (+1 more)
(+2 files in other folders)
