[package]
name = "nexus_core"
version = "0.1.0"
edition = "2021"
description = "Nexus Core — Institutional-grade HFT matching engine types and primitives"
license = "MIT"

[lib]
name = "nexus_core"
# Maturin automatically handles crate-type. For pure Rust testing we use rlib.
# When building with maturin (--features extension-module), it adds cdylib.
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", optional = true }
memmap2 = "0.9"
crc32fast = "1.4"

[features]
default = []
# Enable Python bindings. Build via: maturin develop --features python
python = ["dep:pyo3"]
# For maturin production builds:
extension-module = ["python", "pyo3/extension-module"]

[dev-dependencies]
# criterion = { version = "0.5", features = ["html_reports"] }  # Uncomment when benchmarks are added

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
