[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nexus_core"
version = "0.1.0"
description = "Nexus Core — Institutional-grade HFT matching engine with Python bindings"
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.maturin]
features = ["pyo3/extension-module", "python"]
